Fix tag editor overflow

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -742,7 +742,10 @@ html, body, #main, .app {
     flex: 1 1 auto;
     position: relative;
     word-break: break-word;
+    overflow-y: auto;
+    overflow-x: hidden;
 }
+
 .widget-container{
     overflow:overlay;
 }
